# dsdk-facet-rs

./: .gitignore  Cargo.toml  README.md
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yaml
crates/facet-core/src/jwt/: did.rs  generator.rs  jwk.rs  mod.rs  resolver.rs  test_fixtures.rs  verifier.rs
crates/facet-core/src/jwt/tests/: did.rs  generator.rs  jwk.rs  mod.rs  resolver.rs  verifier.rs
crates/facet-core/src/token/client/: mem.rs  mod.rs  oauth.rs  vault.rs
crates/facet-core/src/token/client/tests/: api_create_token.rs  api_get_token.rs  mem.rs  mocks.rs  oauth.rs  vault.rs
crates/facet-core/src/token/manager/: mod.rs
crates/facet-core/src/token/manager/tests/: mod.rs  token_manager.rs
crates/facet-core/tests/: token_api.rs
crates/facet-hashicorp-vault/tests/: vault_signing.rs
crates/facet-postgres/src/: renewable_token_store.rs  token.rs
crates/facet-postgres/tests/: renewable_token_store_postgres.rs  token_store_postgres.rs
crates/facet-proxy/: Cargo.toml
crates/facet-testcontainers/: Cargo.toml
crates/facet-testcontainers/src/: keycloak.rs  postgres.rs  utils.rs
docs/: siglet.md
e2e/: Cargo.toml  Makefile  README.md
e2e/manifests/: siglet-config.yaml  siglet-deployment.yaml  signaling-jwks.yaml
e2e/scripts/: build-and-load-siglet.sh  run-tests.sh  setup.sh
e2e/src/: utils.rs
e2e/src/fixtures/: mod.rs  siglet.rs  signaling_jwks.rs
e2e/src/tests/: k8s_vault_sidecar.rs  siglet.rs  siglet_e2e.rs
e2e/src/utils/: kubectl.rs
siglet/: Cargo.toml  Dockerfile
siglet/src/: error.rs  http.rs  lib.rs  main.rs  server.rs
siglet/src/assembly/: mod.rs
siglet/src/assembly/tests/: mod.rs
siglet/src/config/: mod.rs
siglet/src/config/tests/: mod.rs
siglet/src/handler/: mod.rs
siglet/src/handler/signaling/: mod.rs
siglet/src/handler/signaling/tests/: mod.rs
siglet/src/handler/tests/: mod.rs
siglet/src/handler/token/: mod.rs
siglet/src/server/: mod.rs
siglet/src/server/auth/: mod.rs
siglet/src/server/auth/tests/: mod.rs
siglet/src/server/signaling/: auth.rs
siglet/src/server/tests/: mod.rs
siglet/tests/: handler_integration.rs  jwks_provider_integration.rs  refresh_handler_integration.rs  signaling_handler_integration.rs  token_handler_integration.rs
