[workspace]
members = ["crates/*", "e2e", "e2e/test-client"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
bon = "3"
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
mockall = "0.14"
sodiumoxide = "0.2"
hex = "0.4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "10"
jwks-client = "0.2.0"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pkcs8 = { version = "0.10", features = ["encryption", "pem"] }
rand = "0.9"
serde_json = "1"
rstest = "0.26"
rsa = "0.9"
wiremock = "0.6"
pingora = "0.8.0"
pingora-core = "0.8.0"
pingora-proxy = "0.8.0"
http = "1.4.0"
aws-sdk-s3 = "1.88"
aws-config = "1.5"
aws-credential-types = "1.2"
aws-smithy-runtime-api = "1.10"
regex = "1"
base64 = "0.22"
multibase = "0.9"
bs58 = "0.5"


[workspace.lints.clippy]
unwrap_used = "deny"
