[package]
name = "dsdk-facet-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "consumer-did-setup"
path = "src/bin/consumer_did_setup.rs"

[dependencies]
tokio = { workspace = true }
anyhow = "1.0"
base64 = { workspace = true }
dsdk-facet-testcontainers = { path = "../crates/facet-testcontainers" }
dsdk-facet-core = { path = "../crates/facet-core" }
uuid = { workspace = true }
serde_json = { workspace = true }
reqwest = "0.12"
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }

[dev-dependencies]

[features]
# Feature flag to enable E2E tests
# Run with: cargo test --package dsdk-facet-e2e-tests --features e2e
e2e = []
