[package]
name = "siglet"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "siglet"
path = "src/main.rs"

[dependencies]
# Facet library crates
dsdk-facet-core = { path = "../crates/facet-core" }
dsdk-facet-proxy = { path = "../crates/facet-proxy" }
dsdk-facet-postgres = { path = "../crates/facet-postgres" }
dsdk-facet-token-provider = { path = "../crates/facet-token-provider" }
dsdk-facet-hashicorp-vault = { path = "../crates/facet-hashicorp-vault" }

# Eclipse Data Plane SDK
dataplane-sdk = { git = "https://github.com/eclipse-dataplane-core/dataplane-sdk-rust", branch = "main" }
dataplane-sdk-axum = { git = "https://github.com/eclipse-dataplane-core/dataplane-sdk-rust", branch = "main" }

# Runtime dependencies
tokio = { workspace = true }
tokio-util = "0.7"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
anyhow = "1.0"
config = "0.14"

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
bon = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
rand = "0.8"
reqwest = "0.12"
sqlx = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
dsdk-facet-core = { path = "../crates/facet-core", features = ["test-fixtures"] }
dsdk-facet-testcontainers = { path = "../crates/facet-testcontainers" }

[lints]
workspace = true
