[package]
name = "dsdk-facet-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dsdk-facet-core = { path = "../facet-core" }
bon = { workspace = true }
http = {workspace = true}
async-trait = {workspace = true}
serde_json = { workspace = true }
aws-sigv4 = "1.2"
aws-credential-types = {workspace = true}
aws-smithy-runtime-api = {workspace = true}
pingora = {workspace = true}
pingora-core = {workspace = true}
pingora-proxy = {workspace = true}
pingora-http = "0.8"
url = "2.5"

[dev-dependencies]
dsdk-facet-postgres = { path = "../facet-postgres" }
dsdk-facet-testcontainers = { path = "../facet-testcontainers" }
tokio = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

[lints]
workspace = true
