[package]
name = "dsdk-facet-testcontainers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = {workspace = true}
reqwest = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["hashicorp_vault"] }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
chrono = { workspace = true }
sqlx = {workspace = true}
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
